Works good on mobile, fixed scroll issue.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,7 @@
     from {opacity: 0.25;}
     to {opacity: 1;}
 }
+
+html, body, #main {
+	height: 100%;
+}
